@@ -182,6 +182,12 @@ public class LocalSessionTest extends AbstractRepairTest
             int calls = completedSessions.getOrDefault(sessionID, 0);
             completedSessions.put(sessionID, calls + 1);
         }
+
+        boolean sessionHasData = false;
+        protected boolean sessionHasData(LocalSession session)
+        {
+            return sessionHasData;
+        }
     }
 
     private static TableMetadata cfm;
@@ -865,10 +871,10 @@ public class LocalSessionTest extends AbstractRepairTest
     }
 
     /**
-     * Sessions past the auto delete cutoff should be deleted
+     * Sessions past the auto delete cutoff with no sstables should be deleted
      */
     @Test
-    public void cleanupDelete() throws Exception
+    public void cleanupDeleteNoSSTables() throws Exception
     {
         LocalSessions sessions = new InstrumentedLocalSessions();
         sessions.start();
@@ -892,6 +898,37 @@ public class LocalSessionTest extends AbstractRepairTest
 
         Assert.assertNull(sessions.loadUnsafe(failed.sessionID));
         Assert.assertNull(sessions.loadUnsafe(finalized.sessionID));
+    }
+
+    /**
+     * Sessions past the auto delete cutoff with no sstables should be deleted
+     */
+    @Test
+    public void cleanupDeleteSSTablesRemaining() throws Exception
+    {
+        InstrumentedLocalSessions sessions = new InstrumentedLocalSessions();
+        sessions.start();
+
+        int time = FBUtilities.nowInSeconds() - LocalSessions.AUTO_FAIL_TIMEOUT - 1;
+        LocalSession failed = sessionWithTime(time - 1, time);
+        failed.setState(FAILED);
+
+        LocalSession finalized = sessionWithTime(time - 1, time);
+        finalized.setState(FINALIZED);
+
+        sessions.putSessionUnsafe(failed);
+        sessions.putSessionUnsafe(finalized);
+        Assert.assertNotNull(sessions.getSession(failed.sessionID));
+        Assert.assertNotNull(sessions.getSession(finalized.sessionID));
+
+        sessions.sessionHasData = true;
+        sessions.cleanup();
+
+        Assert.assertNotNull(sessions.getSession(failed.sessionID));
+        Assert.assertNotNull(sessions.getSession(finalized.sessionID));
+
+        Assert.assertNotNull(sessions.loadUnsafe(failed.sessionID));
+        Assert.assertNotNull(sessions.loadUnsafe(finalized.sessionID));
     }
 
     /**
